Se commitean cambios de las estadisticas agregando el filtrado por registro y tambien los arreglos y cambios en la comanderia