@@ -1,17 +1,25 @@
+// src/main/java/com/movauy/mova/controller/kitchen/KitchenOrderController.java
 package com.movauy.mova.controller.kitchen;
 
+import com.movauy.mova.dto.KitchenOrderDTO;
+import com.movauy.mova.dto.SaleItemResponseDTO;
 import com.movauy.mova.dto.SaleResponseDTO;
 import com.movauy.mova.dto.UpdateKitchenStatusDTO;
+import com.movauy.mova.model.kitchen.KitchenOrder;
+import com.movauy.mova.model.product.ProductCategory;
 import com.movauy.mova.model.sale.Sale;
 import com.movauy.mova.model.sale.Sale.OrderStatus;
+import com.movauy.mova.service.kitchen.KitchenOrderService;
+import com.movauy.mova.service.product.ProductCategoryService;
 import com.movauy.mova.service.sale.SaleService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
-import org.springframework.security.access.prepost.PreAuthorize;
 
 @RestController
 @RequestMapping("/api/kitchen/orders")
@@ -20,16 +28,36 @@ import org.springframework.security.access.prepost.PreAuthorize;
 public class KitchenOrderController {
 
     private final SaleService saleService;
+    private final ProductCategoryService categoryService;
+    private final KitchenOrderService kitchenOrderService;
 
     @GetMapping
-    public ResponseEntity<List<SaleResponseDTO>> listPending(
-            @RequestHeader("Authorization") String token
-    ) {
+    public ResponseEntity<List<Object>> listPending(@RequestHeader("Authorization") String token) {
+        // 1) Ventas pendientes (como ya lo tienes)
         List<Sale> sales = saleService.getOrdersByBranchAndKitchenStatus(token, OrderStatus.SENT_TO_KITCHEN);
-        List<SaleResponseDTO> dtos = sales.stream()
+        List<SaleResponseDTO> saleDtos = sales.stream()
                 .map(saleService::toResponseDTO)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(dtos);
+                .map(dto -> {
+                    List<SaleItemResponseDTO> kitchenItems = dto.getItems().stream()
+                            .filter(item -> {
+                                ProductCategory cat = categoryService.getById(item.getCategoryId());
+                                return cat.isEnableKitchenCommands();
+                            })
+                            .collect(Collectors.toList());
+                    dto.setItems(kitchenItems);
+                    return dto;
+                })
+                .filter(dto -> !dto.getItems().isEmpty())
+                .toList();
+
+        // 2) ✅ snapshots agregados por cuenta (NO toDTO de cada KitchenOrder)
+        List<KitchenOrderDTO> accountDtos = kitchenOrderService.findPendingByBranchAggregated(token);
+
+        // 3) Unir resultados
+        List<Object> result = new ArrayList<>();
+        result.addAll(saleDtos);
+        result.addAll(accountDtos);
+        return ResponseEntity.ok(result);
     }
 
     @PutMapping("/{id}/kitchen-status")
@@ -38,8 +66,14 @@ public class KitchenOrderController {
             @RequestBody UpdateKitchenStatusDTO body
     ) {
         Sale updated = saleService.updateKitchenStatus(id, body.getKitchenStatus());
-        return ResponseEntity.ok(saleService.toResponseDTO(updated));
+        SaleResponseDTO dto = saleService.toResponseDTO(updated);
+        List<SaleItemResponseDTO> kitchenItems = dto.getItems().stream()
+                .filter(it -> {
+                    ProductCategory cat = categoryService.getById(it.getCategoryId());
+                    return cat.isEnableKitchenCommands();
+                })
+                .toList();
+        dto.setItems(kitchenItems);
+        return ResponseEntity.ok(dto);
     }
-    
 }
-
